@@ -1,13 +1,11 @@
 SUBDIRS = data src contrib
 
-desktopdir = $(datadir)/applications
-fyre.desktop:	fyre.desktop.in
-	sed 's|\@DATADIR\@|$(datadir)/fyre/|' $< > $@
-desktop_DATA = fyre.desktop
-
-EXTRA_DIST = \
-	AUTHORS NEWS INSTALL COPYING README \
-	ChangeLog \
-	autogen.sh \
-	configure.ac \
-	fyre.desktop.in
+vXTRA_DIST =		\
+	AUTHORS		\
+	NEWS		\
+	INSTALL		\
+	COPYING		\
+	README		\
+	ChangeLog	\
+	autogen.sh	\
+	configure.ac
